[package]
name = "tcp_tls"
version = "0.1.0"
authors = ["Antoine-goc <Antoine.Handfield@cyber.gc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rustls = "0.19"
rustls-pemfile = "0.2"
webpki = "0.21.4"
simple_parse = "0.6.2"
env_logger = "0"